<resources>
    <string name="app_name">WRU</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_map">Where we are...</string>
    <string name="action_leave">Leave</string>
    <string name="action_request_updates">Request updates</string>
    <string name="action_find">Find...</string>
    <string name="action_view_log">View log</string>
    <string name="action_clear_log">Clear log</string>
    <string name="action_logs">Log</string>
    <string name="hint_your_name">Your name</string>
    <string name="hint_passphrase">Passphrase</string>
    <string name="btn_create">Create</string>
    <string name="hint_existing_key">Existing Group Key</string>
    <string name="btn_join">Join</string>
    <string name="action_disable">Disable</string>
    <string name="action_enable">Enable</string>
    <string name="label_who_you_are">Who you are</string>
    <string name="label_create_group">Create a group</string>
    <string name="label_join_group">Join a group</string>
</resources>
