<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_who_you_are"/>
        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_your_name"
            android:singleLine="true"
            />

        <View
            android:layout_width="10dp"
            android:layout_height="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_create_group"/>
        <EditText
            android:id="@+id/passphrase"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_passphrase"
            />
        <Button
            android:id="@+id/btn_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_create"
            android:onClick="doCreateTopic"
            android:enabled="false"
            />

        <View
            android:layout_width="10dp"
            android:layout_height="30dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/label_join_group"/>
        <EditText
            android:id="@+id/join_topic_key"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_existing_key"
            />
        <EditText
            android:id="@+id/join_topic_passphrase"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/hint_passphrase"
            />
        <Button
            android:id="@+id/btn_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_join"
            android:onClick="doJoinTopic"
            android:enabled="false"
            />
    </LinearLayout>
</ScrollView>
